--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,48 +2,21 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
+        with: { node-version: 20 }
       - run: npm ci
       - run: npm run build
       - run: node tools/generate-sitemap.mjs
-
-      # Optional but recommended if you’ll use catso.io
-      - run: echo catso.io > dist/catsoio/browser/CNAME
-
-      # Optional: avoid Jekyll processing
-      - run: touch dist/catsoio/browser/.nojekyll
-
-      - uses: actions/upload-pages-artifact@v3
+      - name: Add CNAME
+        run: echo catso.io > dist/catsoio/browser/CNAME
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: dist/catsoio/browser
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist/catsoio/browser
+          force_orphan: true
