--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@angular/ssr": "^18.2.20",
 		"@tailwindcss/postcss": "^4.1.11",
 		"express": "^4.18.2",
+		"intersection-observer": "^0.12.2",
 		"lucide-angular": "^0.539.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
