--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-	"name": "catsoio",
+	"name": "catso.io",
 	"version": "0.0.0",
 	"scripts": {
+		"ng": "ng",
 		"start": "ng serve",
-		"dev:ssr": "ng serve",
 		"build": "ng build",
-		"postbuild": "node tools/generate-sitemap.mjs",
-		"start:ssr": "node dist/catsoio/server/server.mjs",
 		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
-		"ng": "ng"
+		"test": "ng test"
 	},
 	"private": true,
 	"dependencies": {
@@ -20,13 +17,10 @@
 		"@angular/forms": "^18.2.0",
 		"@angular/platform-browser": "^18.2.0",
 		"@angular/platform-browser-dynamic": "^18.2.0",
-		"@angular/platform-server": "^18.2.0",
 		"@angular/router": "^18.2.0",
-		"@angular/ssr": "^18.2.20",
 		"@tailwindcss/postcss": "^4.1.11",
-		"express": "^4.18.2",
-		"intersection-observer": "^0.12.2",
-		"lucide-angular": "^0.539.0",
+		"lucide-angular": "^0.544.0",
+		"postcss": "^8.5.6",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.10"
@@ -35,18 +29,14 @@
 		"@angular-devkit/build-angular": "^18.2.13",
 		"@angular/cli": "^18.2.13",
 		"@angular/compiler-cli": "^18.2.0",
-		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
-		"@types/node": "^18.18.0",
-		"autoprefixer": "^10.4.21",
 		"jasmine-core": "~5.2.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"postcss": "^8.5.6",
-		"tailwindcss": "^3.4.17",
-		"typescript": "~5.5.2"
+		"typescript": "~5.5.2",
+		"tailwindcss": "^3.4.17"
 	}
 }
