--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,10 @@
 						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
-				}
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
+        }
 			}
 		}
 	}
