--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve",
+		"start:ssr": "ng run catso.io:serve-ssr",
+		"build:browser": "ng run catso.io:build:production",
+		"build:server": "ng run catso.io:server:production",
+		"build:ssr": "npm run build:browser && npm run build:server",
+		"prerender": "ng run catso.io:prerender:production",
+		"build:static": "npm run build:ssr && npm run prerender && node tools/generate-sitemap.mjs",
+		"preview:static": "npx http-server dist/catso.io/browser -p 4200 -c-1",
+		"deploy": "angular-cli-ghpages --dir=dist/catso.io/browser",
 		"build": "ng build",
 		"postbuild": "node tools/generate-sitemap.mjs",
 		"watch": "ng build --watch --configuration development",
@@ -19,6 +27,7 @@
 		"@angular/platform-browser": "^18.2.0",
 		"@angular/platform-browser-dynamic": "^18.2.0",
 		"@angular/router": "^18.2.0",
+		"@angular/ssr": "^18.2.21",
 		"@tailwindcss/postcss": "^4.1.11",
 		"lucide-angular": "^0.544.0",
 		"postcss": "^8.5.6",
