--- a/angular.json
+++ b/angular.json
@@ -17,36 +17,24 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist/catso.io",
+						"outputPath": "dist/catso.io/browser",
 						"index": "src/index.html",
 						"browser": "src/main.ts",
+						"server": "src/main.server.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [
-							{
-								"glob": "**/*",
-								"input": "public"
-							}
-						],
+						"assets": [{ "glob": "**/*", "input": "public" }],
 						"styles": ["src/styles.scss"],
 						"scripts": []
 					},
 					"configurations": {
 						"production": {
+							"outputHashing": "all",
 							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "3MB",
-									"maximumError": "10MB"
-								},
-								{
-									"type": "anyComponentStyle",
-									"maximumWarning": "200kB",
-									"maximumError": "400kB"
-								}
-							],
-							"outputHashing": "all"
+								{ "type": "initial", "maximumWarning": "3MB", "maximumError": "10MB" },
+								{ "type": "anyComponentStyle", "maximumWarning": "200kB", "maximumError": "400kB" }
+							]
 						},
 						"development": {
 							"optimization": false,
@@ -56,40 +44,62 @@
 					},
 					"defaultConfiguration": "production"
 				},
+
+				"server": {
+					"builder": "@angular-devkit/build-angular:server",
+					"options": {
+						"outputPath": "dist/catso.io/server",
+						"main": "src/main.server.ts",
+						"tsConfig": "tsconfig.server.json"
+					},
+					"configurations": {
+						"production": {},
+						"development": {}
+					},
+					"defaultConfiguration": "production"
+				},
+
+				"prerender": {
+					"builder": "@angular-devkit/build-angular:prerender",
+					"options": {
+						"routes": ["/", "/vera-01"]
+					},
+					"configurations": {
+						"production": {
+							"browserTarget": "catso.io:build:production",
+							"serverTarget": "catso.io:server:production"
+						},
+						"development": {
+							"browserTarget": "catso.io:build:development",
+							"serverTarget": "catso.io:server:development"
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-						"production": {
-							"buildTarget": "catso.io:build:production"
-						},
-						"development": {
-							"buildTarget": "catso.io:build:development"
-						}
+						"production": { "buildTarget": "catso.io:build:production" },
+						"development": { "buildTarget": "catso.io:build:development" }
 					},
 					"defaultConfiguration": "development"
 				},
-				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n"
-				},
+
+				"extract-i18n": { "builder": "@angular-devkit/build-angular:extract-i18n" },
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [
-							{
-								"glob": "**/*",
-								"input": "public"
-							}
-						],
+						"assets": [{ "glob": "**/*", "input": "public" }],
 						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
-        }
+				},
+
+				"deploy": { "builder": "angular-cli-ghpages:deploy" }
 			}
 		}
 	}
