--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^18.2.0",
-		"@angular/common": "^18.2.0",
-		"@angular/compiler": "^18.2.0",
-		"@angular/core": "^18.2.0",
-		"@angular/forms": "^18.2.0",
-		"@angular/platform-browser": "^18.2.0",
-		"@angular/platform-browser-dynamic": "^18.2.0",
-		"@angular/router": "^18.2.0",
-		"@angular/ssr": "^18.2.21",
-		"@tailwindcss/postcss": "^4.1.11",
+		"@angular/animations": "18.2.14",
+		"@angular/common": "18.2.14",
+		"@angular/compiler": "18.2.14",
+		"@angular/core": "18.2.14",
+		"@angular/forms": "18.2.14",
+		"@angular/platform-browser": "18.2.14",
+		"@angular/platform-browser-dynamic": "18.2.14",
+		"@angular/router": "18.2.14",
+		"@angular/ssr": "18.2.14",
 		"lucide-angular": "^0.544.0",
+		"@tailwindcss/postcss": "^4.1.11",
 		"postcss": "^8.5.6",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.10"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.13",
-		"@angular/cli": "^18.2.13",
-		"@angular/compiler-cli": "^18.2.0",
+		"@angular-devkit/build-angular": "18.2.14",
+		"@angular/build": "18.2.14",
+		"@angular/cli": "18.2.14",
+		"@angular/compiler-cli": "18.2.14",
 		"@types/jasmine": "~5.1.0",
-		"angular-cli-ghpages": "^2.0.3",
+		"angular-cli-ghpages": "2.0.3",
 		"jasmine-core": "~5.2.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
