--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
 		"@angular/platform-browser": "18.2.14",
 		"@angular/platform-browser-dynamic": "18.2.14",
 		"@angular/router": "18.2.14",
-		"@angular/ssr": "18.2.14",
-		"lucide-angular": "^0.544.0",
+		"@angular/ssr": "^18.2.21",
 		"@tailwindcss/postcss": "^4.1.11",
+		"lucide-angular": "^0.544.0",
 		"postcss": "^8.5.6",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.10"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "18.2.14",
-		"@angular/build": "18.2.14",
-		"@angular/cli": "18.2.14",
+		"@angular-devkit/build-angular": "^18.2.21",
+		"@angular/build": "^20.3.2",
+		"@angular/cli": "^20.3.2",
 		"@angular/compiler-cli": "18.2.14",
 		"@types/jasmine": "~5.1.0",
 		"angular-cli-ghpages": "2.0.3",
