--- a/angular.json
+++ b/angular.json
@@ -1,111 +1,103 @@
 {
-	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-	"version": 1,
-	"newProjectRoot": "projects",
-	"projects": {
-		"catso.io": {
-			"projectType": "application",
-			"schematics": {
-				"@schematics/angular:component": {
-					"style": "scss"
-				}
-			},
-			"root": "",
-			"sourceRoot": "src",
-			"prefix": "app",
-			"architect": {
-				"build": {
-					"builder": "@angular-devkit/build-angular:application",
-					"options": {
-						"outputPath": "dist/catso.io",
-						"index": "src/index.html",
-						"browser": "src/main.ts",
-						"polyfills": ["zone.js"],
-						"tsConfig": "tsconfig.app.json",
-						"inlineStyleLanguage": "scss",
-						"assets": [{ "glob": "**/*", "input": "public" }],
-						"styles": ["src/styles.scss"],
-						"scripts": []
-					},
-					"configurations": {
-						"production": {
-							"outputHashing": "all",
-							"budgets": [
-								{ "type": "initial", "maximumWarning": "3MB", "maximumError": "10MB" },
-								{ "type": "anyComponentStyle", "maximumWarning": "200kB", "maximumError": "400kB" }
-							]
-						},
-						"development": {
-							"optimization": false,
-							"extractLicenses": false,
-							"sourceMap": true
-						}
-					},
-					"defaultConfiguration": "production"
-				},
-
-				"server": {
-					"builder": "@angular-devkit/build-angular:server",
-					"options": {
-						"outputPath": "dist/catso.io/server",
-						"main": "src/main.server.ts",
-						"tsConfig": "tsconfig.server.json"
-					},
-					"configurations": {
-						"production": {},
-						"development": {}
-					},
-					"defaultConfiguration": "production"
-				},
-
-				"prerender": {
-					"builder": "@angular-devkit/build-angular:prerender",
-					"options": {
-						"routes": ["/home", "/vera-01"]
-					},
-					"configurations": {
-						"production": {
-							"browserTarget": "catso.io:build:production",
-							"serverTarget": "catso.io:server:production"
-						},
-						"development": {
-							"browserTarget": "catso.io:build:development",
-							"serverTarget": "catso.io:server:development"
-						}
-					},
-					"defaultConfiguration": "production"
-				},
-
-				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
-					"configurations": {
-						"production": { "buildTarget": "catso.io:build:production" },
-						"development": { "buildTarget": "catso.io:build:development" }
-					},
-					"defaultConfiguration": "development"
-				},
-
-				"extract-i18n": { "builder": "@angular-devkit/build-angular:extract-i18n" },
-				"test": {
-					"builder": "@angular-devkit/build-angular:karma",
-					"options": {
-						"polyfills": ["zone.js", "zone.js/testing"],
-						"tsConfig": "tsconfig.spec.json",
-						"inlineStyleLanguage": "scss",
-						"assets": [{ "glob": "**/*", "input": "public" }],
-						"styles": ["src/styles.scss"],
-						"scripts": []
-					}
-				},
-
-				"deploy": {
-					"builder": "angular-cli-ghpages:deploy",
-					"options": {
-						"dir": "dist/catso.io/browser",
-						"cname": "catso.io"
-					}
-				}
-			}
-		}
-	}
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "projects",
+  "projects": {
+    "catsoio.github.io": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "",
+      "sourceRoot": "src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "catsoio.github.io:build:production"
+            },
+            "development": {
+              "buildTarget": "catsoio.github.io:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular/build:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "tsconfig.spec.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
+            ],
+            "styles": [
+              "src/styles.scss"
+            ]
+          }
+        }
+      }
+    }
+  }
 }
