--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-	"name": "catso.io",
+	"name": "catsoio.github.io",
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve",
-		"start:ssr": "ng run catso.io:serve-ssr",
-		"build:browser": "ng run catso.io:build:production",
-		"build:server": "ng run catso.io:server:production",
-		"build:ssr": "npm run build:browser && npm run build:server",
-		"prerender": "ng run catso.io:prerender:production",
-		"build:static": "npm run build:ssr && npm run prerender && node tools/generate-sitemap.mjs",
-		"preview:static": "npx http-server dist/catso.io/browser -p 4200 -c-1",
-		"deploy": "angular-cli-ghpages --dir=dist/catso.io/browser",
 		"build": "ng build",
-		"postbuild": "node tools/generate-sitemap.mjs",
 		"watch": "ng build --watch --configuration development",
-		"test": "ng test"
+		"test": "ng test",
+		"serve:ssr:catsoio.github.io": "node dist/catsoio.github.io/server/server.mjs"
+	},
+	"prettier": {
+		"printWidth": 100,
+		"singleQuote": true,
+		"overrides": [
+			{
+				"files": "*.html",
+				"options": {
+					"parser": "angular"
+				}
+			}
+		]
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "18.2.14",
-		"@angular/common": "18.2.14",
-		"@angular/compiler": "18.2.14",
-		"@angular/core": "18.2.14",
-		"@angular/forms": "18.2.14",
-		"@angular/platform-browser": "18.2.14",
-		"@angular/platform-browser-dynamic": "18.2.14",
-		"@angular/router": "18.2.14",
-		"@angular/ssr": "^18.2.21",
+		"@angular/common": "^20.3.0",
+		"@angular/compiler": "^20.3.0",
+		"@angular/core": "^20.3.0",
+		"@angular/forms": "^20.3.0",
+		"@angular/platform-browser": "^20.3.0",
+		"@angular/platform-server": "^20.3.0",
+		"@angular/router": "^20.3.0",
+		"@angular/ssr": "^20.3.2",
 		"@tailwindcss/postcss": "^4.1.11",
 		"lucide-angular": "^0.544.0",
-		"postcss": "^8.5.6",
+		"express": "^5.1.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.14.10"
+		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.21",
 		"@angular/build": "^20.3.2",
 		"@angular/cli": "^20.3.2",
-		"@angular/compiler-cli": "18.2.14",
+		"@angular/compiler-cli": "^20.3.0",
+		"@types/express": "^5.0.1",
 		"@types/jasmine": "~5.1.0",
-		"angular-cli-ghpages": "2.0.3",
-		"jasmine-core": "~5.2.0",
+		"@types/node": "^20.17.19",
+		"jasmine-core": "~5.9.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
 		"tailwindcss": "^3.4.17",
-		"typescript": "~5.5.2"
+		"typescript": "~5.9.2"
 	}
 }
