--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"ng": "ng",
 		"start": "ng serve",
 		"build": "ng build",
+		"postbuild": "node tools/generate-sitemap.mjs",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"serve:ssr:catsoio.github.io": "node dist/catsoio.github.io/server/server.mjs"
