--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,5 +1,4 @@
-name: Deploy Angular SSG to GitHub Pages
-
+name: Deploy to GitHub Pages
 on:
   push:
     branches: [main]
@@ -11,7 +10,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
@@ -23,22 +22,21 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
-      - name: Install deps
-        run: npm ci
+      - run: npm install
+      - run: npm run build
+      - run: node tools/generate-sitemap.mjs
 
-      # Build *prerendered* site (this runs browser+server and prerender)
-      - name: Build (prerender)
-        run: npx ng run catsoio.github.io:prerender:production
+      # Optional but recommended if you’ll use catso.io
+      - run: echo catso.io > dist/catsoio/browser/CNAME
 
-      - name: Add SPA fallback (optional)
-        run: cp dist/catsoio.github.io/browser/index.html dist/catsoio.github.io/browser/404.html
+      # Optional: avoid Jekyll processing
+      - run: touch dist/catsoio/browser/.nojekyll
 
-      # Upload built site directory as Pages artifact
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v4
+      - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/catsoio.github.io/browser
+          path: dist/catsoio/browser
 
   deploy:
     needs: build
@@ -47,6 +45,5 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
