--- a/angular.json
+++ b/angular.json
@@ -5,32 +5,49 @@
 	"projects": {
 		"catsoio.github.io": {
 			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
 			"root": "",
 			"sourceRoot": "src",
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular/build:application",
+					"builder": "@angular-devkit/build-angular:application",
 					"options": {
+						"outputPath": "dist/catsoio.github.io",
+						"index": "src/index.html",
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [{ "glob": "**/*", "input": "public" }],
+						"assets": [
+							{
+								"glob": "**/*",
+								"input": "public"
+							},
+							{ "glob": "**/*", "input": "src/assets", "output": "assets" }
+						],
 						"styles": ["src/styles.scss"],
-						"outputMode": "static",
-						"prerender": {
-							"discoverRoutes": true
-						},
-						"baseHref": "/",
-						"deployUrl": "/",
-						"outputPath": "dist/catsoio.github.io"
+						"scripts": [],
+						"server": "src/main.server.ts",
+						"prerender": true
 					},
 					"configurations": {
 						"production": {
 							"budgets": [
-								{ "type": "initial", "maximumWarning": "4MB", "maximumError": "6MB" },
-								{ "type": "anyComponentStyle", "maximumWarning": "400kB", "maximumError": "800kB" }
+								{
+									"type": "initial",
+									"maximumWarning": "5MB",
+									"maximumError": "10MB"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "20kB",
+									"maximumError": "40kB"
+								}
 							],
 							"outputHashing": "all"
 						},
@@ -43,32 +60,35 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular/build:dev-server",
+					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
-						"production": { "buildTarget": "catsoio.github.io:build:production" },
-						"development": { "buildTarget": "catsoio.github.io:build:development" }
+						"production": {
+							"buildTarget": "catsoio.github.io:build:production"
+						},
+						"development": {
+							"buildTarget": "catsoio.github.io:build:development"
+						}
 					},
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
-					"builder": "@angular/build:extract-i18n"
+					"builder": "@angular-devkit/build-angular:extract-i18n"
 				},
 				"test": {
-					"builder": "@angular/build:karma",
+					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
 						"polyfills": ["zone.js", "zone.js/testing"],
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
-						"assets": [{ "glob": "**/*", "input": "public" }],
-						"styles": ["src/styles.scss"]
-					}
-				},
-				"deploy": {
-					"builder": "angular-cli-ghpages:deploy",
-					"options": {
-						"baseHref": "/",
-						"dir": "dist/catsoio.github.io/browser",
-						"noBuild": true
+						"assets": [
+							{
+								"glob": "**/*",
+								"input": "public"
+							},
+							{ "glob": "**/*", "input": "src/assets", "output": "assets" }
+						],
+						"styles": ["src/styles.scss"],
+						"scripts": []
 					}
 				}
 			}
