--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,14 +29,14 @@ jobs:
       - run: node tools/generate-sitemap.mjs
 
       # Optional but recommended if you’ll use catso.io
-      - run: echo catso.io > dist/catsoio.github.io/browser/CNAME
+      - run: echo catso.io > dist/catsoio/browser/CNAME
 
       # Optional: avoid Jekyll processing
-      - run: touch dist/catsoio.github.io/browser/.nojekyll
+      - run: touch dist/catsoio/browser/.nojekyll
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/catsoio.github.io/browser
+          path: dist/catsoio/browser
 
   deploy:
     needs: build
